--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,7 +31,7 @@
   'components/navbar',
   'components/navs',
   'components/panels',
-  'components/wells'
+  'components/wells';
 
 // 6. Page-specific styles
 @import
