add iconfont components from original project; add required font families

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,6 +1,9 @@
 // Mixins
 // --------------------------------------------------
 
+// font-face
+@import "mixins/font-face";
+
 // Utilities
 @import "mixins/hide-text";
 @import "mixins/opacity";
