--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@
 // 5. Components
 @import
   'components/badges',
+  'components/icons',
   'components/dropdowns',
   'components/list-group',
   'components/navbar',
