--- a/src/views/layout/header.jade
+++ b/src/views/layout/header.jade
@@ -1,2 +1,21 @@
 header#header
-  
+  .navbar.navbar-default
+    .navbar-header
+      a.navbar-brand(href="/")
+        img(alt="Pipedrive" src="assets/svg/logo-full-white-optimized.svg")
+    ul.nav.navbar-nav
+      li
+        a(href="#")
+          i.icon.icon-deal
+          span.label Deals
+      li
+        a(href="#")
+          i.icon.icon-activities
+          span.label Activities
+      li
+        a(href="#")
+          i.icon.icon-contacts
+      li
+        a(href="#")
+          i.icon.icon-statistics
+        
