fix font loading errors

--- a/src/views/layout/header.jade
+++ b/src/views/layout/header.jade
@@ -5,17 +5,17 @@ header#header
         img(alt="Pipedrive" src="assets/svg/logo-full-white-optimized.svg")
     ul.nav.navbar-nav
       li
-        a(href="#")
+        a.item(href="#")
           i.icon.icon-deal
           span.label Deals
       li
-        a(href="#")
+        a.item(href="#")
           i.icon.icon-activities
           span.label Activities
       li
-        a(href="#")
+        a.item(href="#")
           i.icon.icon-contacts
       li
-        a(href="#")
+        a.item(href="#")
           i.icon.icon-statistics
         
