--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -3,5 +3,5 @@
 // -----------------------------------------------------------------------------
 
 @include font-face("Pipedings", "../assets/fonts/Pipedings", bold, italic);
-@include font-face("Lucida Grande", "../assets/fonts/LucidaGrande.ttf", bold, italic);
-@include font-face("Museo", "../assets/fonts/Museo700-Regular.ttf", bold, italic);
+@include font-face("Lucida Grande", "../assets/fonts/LucidaGrande", bold, italic);
+@include font-face("Museo", "../assets/fonts/Museo700-Regular", bold, italic);
