--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -232,9 +232,17 @@
   margin: ($navbar-padding-vertical / 2) (-$navbar-padding-horizontal);
 
   > li > a {
-    padding-top:    10px;
-    padding-bottom: 10px;
-    line-height: $line-height-computed;
+    &.item {
+      padding-top: 13px;
+      padding-top:    13px;
+      padding-bottom: 10px;
+      line-height: $line-height-computed;
+    }
+
+    .label {
+      padding-left: 7px;
+      color: $link-color;
+    }
   }
 
   @media (max-width: $grid-float-breakpoint-max) {
