--- a/src/views/layout/head.jade
+++ b/src/views/layout/head.jade
@@ -7,7 +7,7 @@ meta(name='theme-color', content='#ffffff')
 meta(charset='utf-8')
 meta(name='description', content='Pipedrive Alternative Client')
 meta(name='viewport', content='width=device-width, initial-scale=1')
-title Pipedrive Alternative Client
+title Pipedrive
 link(rel='apple-touch-icon', sizes='57x57', href='/apple-touch-icon-57x57.png')
 link(rel='apple-touch-icon', sizes='60x60', href='/apple-touch-icon-60x60.png')
 link(rel='apple-touch-icon', sizes='72x72', href='/apple-touch-icon-72x72.png')
