--- a/src/views/layout/header.jade
+++ b/src/views/layout/header.jade
@@ -1,5 +1,5 @@
 header#header
-  .navbar.navbar-default
+  .navbar.navbar-default.navbar-fixed-top
     .navbar-header
       a.navbar-brand(href="/")
         img(alt="Pipedrive" src="assets/svg/logo-full-white-optimized.svg")
