--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -30,6 +30,7 @@ body {
   line-height: $line-height-base;
   color: $text-color;
   background-color: $body-bg;
+  padding-top: 70px;
 }
 
 // Reset fonts for relevant elements
