--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -35,9 +35,6 @@ h3, .h3 {
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  margin-top: ($line-height-computed / 2);
-  margin-bottom: ($line-height-computed / 2);
-
   small,
   .small {
     font-size: 75%;
@@ -203,6 +200,8 @@ dd {
 // grid breakpoint is reached (default of ~768px).
 
 .dl-horizontal {
+  $offset-multiplier: 8;
+
   dd {
     @include clearfix; // Clear the floated `dt` if an empty `dd` is present
   }
@@ -216,7 +215,8 @@ dd {
       @include text-overflow;
     }
     dd {
-      margin-left: $dl-horizontal-offset;
+      margin-left: $dl-horizontal-offset*$offset-multiplier;
+      margin-bottom: $dl-horizontal-offset;
     }
   }
 }
