--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -46,10 +46,21 @@ block main
             .panel.panel-default.clearfix
               .panel-heading
                 .row
-                  .col-md-8 Title
-                  .col-md-4 Sum
-              .panel-body
+                  .col-md-8.item 
+                    strong Title
+                  .col-md-4.item
+                    strong Sum
+              .panel-body.smallest-deal
                 .row
-                  .col-md-8 Limpa muud joogid
-                  .col-md-4 250 $
+                  .col-md-8
+                    span.text-muted Limpa muud joogid
+                  .col-md-4
+                    span.text-muted 250 $
+                .row
+              .panel-footer.largest-deal
+                .row
+                  .col-md-8
+                    span.text-muted Limpa deal
+                  .col-md-4
+                    span.text-muted 1,200 $  
       
