--- a/src/views/layout/header.jade
+++ b/src/views/layout/header.jade
@@ -1,4 +1,4 @@
-header#header
+header#header.hidden
   .navbar.navbar-default.navbar-fixed-top
     .navbar-header
       a.navbar-brand(href="/")
@@ -11,7 +11,9 @@ header#header
       li
         a.item(href="#")
           i.icon.icon-activities
+          span.badge.activities-count.hidden 2
           span.label Activities
+          
       li
         a.item(href="#")
           i.icon.icon-contacts
