--- a/src/views/layout/header.jade
+++ b/src/views/layout/header.jade
@@ -11,7 +11,7 @@ header#header.hidden
       li
         a.item(href="#")
           i.icon.icon-activities
-          span.badge.activities-count.hidden 2
+          span.badge.activities-count.hidden <%= activitiesCount %>
           span.label Activities
           
       li
