--- a/src/views/layout/application.jade
+++ b/src/views/layout/application.jade
@@ -16,4 +16,4 @@ html(lang='en')
             block main
         
   block script      
-    script(type="text/javascript" src='js/main.js')
+    script(type="text/javascript" src='/js/main.js')
