--- a/src/views/layout/head.jade
+++ b/src/views/layout/head.jade
@@ -1,4 +1,3 @@
-
 meta(name='apple-mobile-web-app-title', content='Pipedrive')
 meta(name='application-name', content='Pipedrive')
 meta(name='msapplication-TileColor', content='#da532c')
@@ -23,4 +22,4 @@ link(rel='icon', type='image/png', href='/favicon-96x96.png', sizes='96x96')
 link(rel='icon', type='image/png', href='/favicon-16x16.png', sizes='16x16')
 link(rel='manifest', href='/manifest.json')
 link(rel='mask-icon', href='/safari-pinned-tab.svg', color='#5bbad5')
-link(rel='stylesheet', href='css/main.css')
+link(rel='stylesheet', href='/css/main.css')
